# vaultwarden-s3-backup

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: backup.py  config.py  crypto.py  decrypt.py  local.py  main.py  notify.py  s3.py
tests/: test_backup.py  test_config.py  test_crypto.py  test_local.py  test_notify.py
